set(STEELJSON_BOOKS_TARGET_NAME books)

add_executable(${STEELJSON_BOOKS_TARGET_NAME} main.cpp)

set_property(TARGET ${STEELJSON_BOOKS_TARGET_NAME} PROPERTY CXX_STANDARD 14)

target_link_libraries(${STEELJSON_BOOKS_TARGET_NAME} ${STEELJSON_TARGET_NAME})

foreach(CONFIG ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER ${CONFIG} CONFIG)
	get_target_property(BOOKS_RUNTIME_OUTPUT_DIRECTORY_${CONFIG} books RUNTIME_OUTPUT_DIRECTORY_${CONFIG})
	configure_file(books.json ${BOOKS_RUNTIME_OUTPUT_DIRECTORY_${CONFIG}}/books.json COPYONLY)
endforeach(CONFIG CMAKE_CONFIGURATION_TYPES)
