set(STEELJSON_READFILE_TARGET_NAME read_file)

add_executable(${STEELJSON_READFILE_TARGET_NAME} main.cpp)

set_property(TARGET ${STEELJSON_READFILE_TARGET_NAME} PROPERTY CXX_STANDARD 14)

target_link_libraries(${STEELJSON_READFILE_TARGET_NAME} ${STEELJSON_TARGET_NAME})

foreach(CONFIG ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER ${CONFIG} CONFIG)
	get_target_property(READ_FILE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG} read_file RUNTIME_OUTPUT_DIRECTORY_${CONFIG})
	configure_file(players.json ${READ_FILE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG}}/players.json COPYONLY)
endforeach(CONFIG CMAKE_CONFIGURATION_TYPES)
